# c0nst

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs  tests.rs
src/attrs/: attribute.rs  mod.rs
src/convert/: group.rs  ident.rs  mod.rs  rule.rs  stream.rs  subslice.rs  tt.rs
src/xform/: attributes.rs  generics.rs  genparam.rs  implitem.rs  item.rs  itemenum.rs  itemfn.rs  itemimpl.rs  itemmod.rs  itemstruct.rs  itemtrait.rs  itemtype.rs  itemunion.rs  mod.rs  punctbound.rs  punctgenparam.rs  punctwhere.rs  signature.rs  traitbound.rs  traititem.rs  typebound.rs  typeparam.rs  vecimpl.rs  vectrait.rs  whereclause.rs  wherepred.rs
